2018-07-01  Fred Kiefer <fredkiefer@gmx.de>

	* Source/NSString.m: Small cleanup for printf registration.
	* Tests/base/NSString/test00.m: Add David Chisnall's test from
	newapi branch slightly reformatted.
	* Source/GSString.m: Remove code that was identical to super class.

2018-06-28  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSXMLParser.m: Fix conversion of numeric entities with large
	values into UTF-16 surrogate pairs before returning them as string.

2018-06-12  Richard Frith-Macdonald <rfm@gnu.org>

	* Documentation/Base.gsdoc:
	* Source/GSPrivate.h:
	* Source/NSException.m:
	* Source/NSUserDefaults.m:
	Add boolean GSExceptionStackTrace user default to turn on inclusion
	of stack trace information in the -description of an exception
	(like the GNUSTEP_STACK_TRACE environment variable). Useful for
	diagnostic logs of a long running server process.

2018-04-30  Graham Lee  <graham@iamleeg.com>

	* Source/NSCalendar.m (calendarWithIdentifier:):
	New convenience method implemented by Cocoa.

2018-05-29  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSObject.m: avoid static initialisation macro for allocation
	locks in case some systems implement it in a way that doesn't work
	after static initialisation takes place.

2018-05-27  Fred Kiefer <fredkiefer@gmx.de>

	* Tests/base/NSProcessInfo/general.m: Mark test for -systemUptime
	as hopeful as it may fail in GNU Hurd.
	Fixes bug #53941.
	Based on idea by Yavor Doganov  <yavor@gnu.org>

2018-05-21  Fred Kiefer <fredkiefer@gmx.de>

	* Source/GSConcreteValueTemplate.m: Add hack to make point and
	size subclasses for NSValue interchangable.

2018-05-20  Ivan Vucica <ivan@vucica.net>

	* Source/NSThread.m:
	Fix typo in code branch for platforms without pthread_spin_lock().
	Check for value of HAVE_PTHREAD_SPIN_LOCK instead of whether the
	macro is defined.

2018-05-18  Richard Frith-Macdonald <rfm@gnu.org>

	* Tools/gdnc.m: Remove a little unused code
	* Headers/Foundation/NSFileHandle.h: